--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(DP_BUILDER builder)
 set(DP_FACTORY factory)
 set(DP_PROTOTYPE prototype)
 set(DP_SINGLETON singleton)
+set(DP_STRATEGY strategy)
 
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall")
@@ -12,3 +13,4 @@ add_subdirectory(${DP_BUILDER})
 add_subdirectory(${DP_FACTORY})
 add_subdirectory(${DP_PROTOTYPE})
 add_subdirectory(${DP_SINGLETON})
+add_subdirectory(${DP_STRATEGY})
